@@ -1,3 +1,8 @@
+== master
+
+  * ActiveRecord 3.1 association compatibility [Ian White]
+
+
 == 0.0.5
   
   * Adds Mongo Mapper adapter [Luke Cunningham]
